--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 /.idea/
 *.iml
+#Backend
+/backend/.mvn
+/backend/mvnw
+/backend/mvnw.cmd
+/backend/target/
+
+#Frontend
+/frontend/logs
+/frontend/*.log
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
+/frontend/pnpm-debug.log*
+/frontend/lerna-debug.log*
+
+/frontend/node_modules
+/frontend/dist
+/frontend/dist-ssr
+/frontend/*.local
