--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           npm run build
           
 
-      - uses: : actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
           name: frontend-build
           path: frontend/dist
