--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,4 +78,14 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_TAG }}
           context: .
 
+  deploy-render:
+    name: Deployment render.com
+    runs-on: ubuntu-latest
+    needs: push-to-docker-hub
+    steps:
+      - name: Trigger render.com Deployment
+        run: |
+          curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL}}
+    
+
 
