--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,6 +82,9 @@ jobs:
     name: Deployment render.com
     runs-on: ubuntu-latest
     needs: push-to-docker-hub
+    environment:
+      name: Test Deploy
+      url: https://capstone-ti5n.onrender.com
     steps:
       - name: Trigger render.com Deployment
         run: |
